# Ledgerly

./: .dockerignore  .env.prod.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  Taskfile.yml  WORKFLOW.md  compose.yaml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  mise.toml  pyproject.toml  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cmd/ledgerly/: demo_integration_test.go  main.go  main_test.go
docs/: agents.md  cli.md  deploy.md  dev-guide.md  testing.md
docs/backlog/: cv-228-invoicing-subissues.md
docs/design/: hld.md
docs/design_handoff_keel/: Keel App.dc.html  README.md
internal/advisor/: condition.go  condition_test.go  doc.go  evaluate.go  evaluate_snapshot_test.go  evaluate_test.go  fact_keys.go  fact_provider.go  fact_provider_test.go  facts_doc_test.go  http.go  http_test.go  module.go  openapi.go  provider_dividends.go  provider_dla.go  provider_identity.go  provider_invoicing.go  provider_moneyfx.go  provider_reports.go  service.go  store.go  types.go
internal/app/: app.go  app_test.go  dashboard_http.go  dashboard_http_test.go  dashboard_openapi.go  jurisdiction_http.go  jurisdiction_http_test.go  jurisdiction_openapi.go
internal/audit/: api.go  api_test.go  doc.go  http.go  openapi.go  service.go  (+1 more)
web/: README.md  Taskfile.yml  embed.go  eslint.config.js  package-lock.json  package.json  playwright.config.ts  stylelint.config.js  tsconfig.json  vite.config.ts
(+457 files in other folders)
